--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ html, body {
   padding: 0;
   font-family: sans-serif;
   background: black;
+  color: white;
 }
 
 .jumbotron {
@@ -11,6 +12,7 @@ html, body {
 
 .jumbotron h1 {
   font-size: 50px;
+  color: white;
 }
 
 .clock {
