--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ html, body {
   padding: 0;
   font-family: sans-serif;
   background: black;
-  color: white;
+  color: black;
 }
 
 .container {
@@ -16,7 +16,6 @@ html, body {
   font-size: 40px;
 }
 
-
 .clock {
   color: white;
   margin-top: 230px;
@@ -28,4 +27,10 @@ html, body {
 
 #date {
   font-size: 30px;
+}
+
+canvas {
+  position: fixed;
+  top: 0px;
+  border: 1px solid blue;
 }
