--- a/style.css
+++ b/style.css
@@ -1,30 +1,53 @@
+
 html, body {
   margin: auto;
   padding: 0;
   font-family: sans-serif;
   background: black;
-  color: black;
+  color: white;
 }
-
 .container {
   margin: auto;
   width: 95%;
 }
 
 .jumbotron {
+  text-align: left;
+}
+.jumbotron h1 {
+  font-size: 20px;
+}
+
+#weather {
+  color: white;
+  width: 200px;
   text-align: center;
-  font-size: 40px;
+  position: fixed;
+  left: 400px;
+  top: 0;
+}
+#weather h2 {
+  margin: 10px 0 0;
+  padding: 0;
+}
+#weather ul {
+  list-style-type: none;
+
+  padding: 0;
+  margin: 0;
+}
+#weather li {
+  display: inline-block;
+  margin: 0 10px;
 }
 
 .clock {
   color: white;
   margin-top: 230px;
 }
-
 #time {
   font-size: 50px;
 }
-
 #date {
   font-size: 30px;
 }
