--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 * {
-  /* border: 1px solid yellow; */
+
 }
 
 @font-face {
@@ -43,6 +43,8 @@ i {
   text-transform: none;
   margin: 0;
   padding: 0;
+  position: relative;
+  top: -10px;
 }
 #weather {
   color: white;
@@ -82,6 +84,18 @@ i {
   margin: 0;
   padding: 0;
   position: absolute;
+}
+.card ul {
+  list-style-type: none;
+  position: absolute;
+}
+.card li {
+  margin: 20px 0 0;
+  position: relative;
+  left: -30px;
+
+
+
 }
 
 .clock {
